--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   font-family: Helvetica;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .navbar {
   background-color: rgb(36, 41, 46);
   color: #fff;
@@ -142,4 +146,88 @@ body {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+#game {
+  height: 80%;
+  width: 80%;
+}
+.banner {
+  text-align: center;
+  color: #fff;
+  background: #3f51b5;
+  line-height: 29px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  font-family: monospace;
+  height: 30px;
+  opacity: .4;
+  display: flex;
+  transition: .5s
+}
+
+.banner:hover {
+  opacity: 1
+}
+
+div#selector>div {
+  flex-basis: 30%
+}
+
+@keyframes diss {
+  from {
+      opacity: 1
+  }
+
+  to {
+      opacity: 0
+  }
+}
+
+.keypress>div {
+  border: dashed 3px #fff;
+  height: 48%;
+  width: 48%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  font-size: -webkit-xxx-large;
+  font-weight: 900;
+  color: #fff;
+  transition: .5s;
+  opacity: .1;
+  border-radius: 7px
+}
+
+.keypress {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  opacity: 1;
+  user-select: none
+}
+
+.keypress>div:hover {
+  opacity: 1
+}
+
+.touch {
+  background: #8bc34a
+}
+
+.off {
+  background: #f44336
+}
+
+.hide {
+  opacity: 0
 }
