--- a/style.css
+++ b/style.css
@@ -236,3 +236,18 @@ div#selector>div {
 .hide {
   opacity: 0
 }
+
+.parentimage {
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+}
+.parentimage:hover {
+	-moz-transform: scale(1.5);
+	-webkit-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	-ms-transform: scale(1.5);
+	transform: scale(1.5);
+  z-index: 2;
+}
