Add tut for webpage, 2 addition files intro.js & intro.css, add classes to images, side toolbars.. etc to use the tut functions

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/Sizing.css
@@ -131,3 +131,17 @@ body.modal-open {
   z-index: 2;
 }
 
+.parentimage2 {
+	-webkit-transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+	-o-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+}
+.parentimage2:hover {
+	-moz-transform: scale(1.5);
+	-webkit-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	-ms-transform: scale(1.5);
+	transform: scale(1.5);
+  z-index: 2;
+}
