Add new nav bar, and bootstrap file

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
@@ -7,15 +7,9 @@ body.modal-open {
   overflow: hidden;
 }
 
-.navbar {
-  background-color: rgb(36, 41, 46);
-  color: #fff;
-  padding-left: .5rem;
-}
-
-.navbar-content {
-  font-size: 30px;
-  padding-left: 12px;
+.Option-Drawing {
+  background-color: rgb(31, 30, 30);
+  padding-top: 15px;
 }
 
 .sidebar {
