Remove 10000limit, error message. Add a scroll bar instead

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
@@ -55,6 +55,7 @@ body.modal-open {
   position: relative;
   width: 1000px;
   height: 300px;
+  overflow-x: scroll;
 }
 
 .canvas-container > canvas:first-child {
