--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
@@ -51,6 +51,10 @@ body.modal-open {
   margin-left: 12px;
 }
 
+.content-wrapper > div:first-child{
+  position: absolute;
+}
+
 .canvas-container {
   position: relative;
   width: 1000px;
