--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
@@ -3,9 +3,6 @@ body {
   background-color: #b9c5c400;
 }
 
-body.modal-open {
-  overflow: hidden;
-}
 
 .sidebar {
   width: 180px;
@@ -140,4 +137,44 @@ body.modal-open {
 	-ms-transform: scale(1.5);
 	transform: scale(1.5);
   z-index: 2;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 0 auto;
+  padding: 2px;
+  border: 1px solid #888;
+  width: 40%;
+
+}
+
+/* The Close Button */
+.close {
+  color: #0a0a0a;
+  float: top;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
