--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
@@ -179,89 +179,42 @@ body {
   cursor: pointer;
 }
 
-
-
-
-
-
-
-#loader-wrapper .loader-section {
+#button{
+  display:block;
+  margin:20px auto;
+  padding:10px 30px;
+  background-color:#eee;
+  border:solid #ccc 1px;
+  cursor: pointer;
+}
+#overlay{	
   position: fixed;
   top: 0;
-  width: 51%;
-  height: 100%;
-  background: #222222;
-  z-index: 1000;
-}
-
-#loader-wrapper .loader-section.section-left {
-  left: 0;
-}
-
-#loader-wrapper .loader-section.section-right {
-  right: 0;
-}
-
-#loader {
-  z-index: 1001; /* anything higher than z-index: 1000 of .loader-section */
-}
-h1 {
-  color: #EEEEEE;
-}
-
-#content {
-  margin: 0 auto;
-  padding-bottom: 50px;
-  width: 80%;
-  max-width: 978px;
-}
-
-/* Loaded */
-.loaded #loader-wrapper .loader-section.section-left {
-  -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-  -ms-transform: translateX(-100%);  /* IE 9 */
-  transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
-}
-
-.loaded #loader-wrapper .loader-section.section-right {
-  -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-  -ms-transform: translateX(100%);  /* IE 9 */
-  transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
-}
-
-.loaded #loader {
-  opacity: 0;
-}
-
-.loaded #loader-wrapper {
-  visibility: hidden;
-}
-
-.loaded #loader {
-  opacity: 0;
-  -webkit-transition: all 0.3s ease-out;
-          transition: all 0.3s ease-out;
-}
-
-.loaded #loader-wrapper .loader-section.section-right,
-.loaded #loader-wrapper .loader-section.section-left {
- 
-    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-}
-
-.loaded #loader-wrapper {
-  -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-          transform: translateY(-100%);
-
-  -webkit-transition: all 0.3s 1s ease-out;
-          transition: all 0.3s 1s ease-out;
-}
-
-.no-js #loader-wrapper {
+  z-index: 100;
+  width: 100%;
+  height:100%;
   display: none;
+  background: rgba(0,0,0,0.6);
 }
-.no-js h1 {
-  color: #222222;
+.cv-spinner {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px #ddd solid;
+  border-top: 4px #2e93e6 solid;
+  border-radius: 50%;
+  animation: sp-anime 0.8s infinite linear;
+}
+@keyframes sp-anime {
+  100% { 
+    transform: rotate(360deg); 
+  }
+}
+.is-hide{
+  display:none;
 }
