PDF working liao

--- a/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
+++ b/d059c1812c7d78f2653bd748c878ea8aa6ea9004/css/Sizing.css
@@ -144,7 +144,7 @@ body {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 50px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -161,6 +161,12 @@ body {
   padding: 2px;
   border: 1px solid #888;
   width: 700px;
+}
+
+.modal2-content {
+  background-color: #fefefe;
+  margin: auto;
+  width: 1500px;
 }
 
 #myExcelDiv {
